src/main/default/objects/Account/Account.object-meta.xml
<CustomObject>
    <namedFilters>
        <fullName>Contact_00Ni0000005pEbWEAU</fullName>
        <active>true</active>
        <field>Contact.Office__c</field>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Office</value>
        </filterItems>
        <filterItems>
            <field>Account.IsArchived__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Contact_Office</name>
    </namedFilters>
    <namedFilters>
        <fullName>Contact_Account</fullName>
        <active>true</active>
        <field>Contact.AccountId</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Office</value>
        </filterItems>
        <filterItems>
            <field>Account.IsArchived__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Contact_Account Name</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ii0000000wqG0EAI_00Ni0000005oKkKEAU</fullName>
        <active>true</active>
        <errorMessage>The value does not match a valid customer (Account) record.</errorMessage>
        <field>Checklist__c.Account__c</field>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Default</value>
        </filterItems>
        <filterItems>
            <field>Account.IsArchived__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Checklist_Account</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ii0000000wqG0EAI_00Ni0000005oac9EAA</fullName>
        <active>true</active>
        <errorMessage>The value does not match a valid office (Account) record.</errorMessage>
        <field>Checklist__c.Office__c</field>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Office</value>
        </filterItems>
        <filterItems>
            <field>Account.IsArchived__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Checklist_Office</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ii0000000wqG4EAI_00Ni0000005oabzEAA</fullName>
        <active>true</active>
        <errorMessage>The value does not match a valid office (Account) record.</errorMessage>
        <field>Equipment__c.Office__c</field>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Office</value>
        </filterItems>
        <filterItems>
            <field>Account.IsArchived__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Equipment_Office</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ii0000000wqG7EAI_00Ni0000005oabuEAA</fullName>
        <active>true</active>
        <field>Job__c.Office__c</field>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Office</value>
        </filterItems>
        <filterItems>
            <field>Account.IsArchived__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Job_Office</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ii0000000wqGAEAY_00Ni0000005oKm9EAE</fullName>
        <active>true</active>
        <errorMessage>The value does not match a valid customer (Account) record.</errorMessage>
        <field>Price_Book__c.Account__c</field>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>notEqual</operation>
            <value>Office</value>
        </filterItems>
        <filterItems>
            <field>Account.IsArchived__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Price Book_Account</name>
        <sourceObject>Price_Book__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ii0000000wqGAEAY_00Ni0000005oabaEAA</fullName>
        <active>true</active>
        <errorMessage>The value does not match a valid office (Account) record.</errorMessage>
        <field>Price_Book__c.Office__c</field>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Office</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Price Book_Office</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ii0000000wqGGEAY_00Ni0000005oaSDEAY</fullName>
        <active>true</active>
        <field>Sync_Configuration__c.Office__c</field>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Office</value>
        </filterItems>
        <filterItems>
            <field>Account.IsArchived__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Sync Configuration_Office</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ii00000016DcYEAU_00Ni0000007kLVEEA2</fullName>
        <active>true</active>
        <field>Sync_Configuration__c.Account__c</field>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>notEqual</operation>
            <value>Office</value>
        </filterItems>
        <filterItems>
            <field>Account.IsArchived__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Sync Configuration_Account</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ii000000171vhEAA_00Ni0000008dQI0EAM</fullName>
        <active>true</active>
        <field>Report_Template__c.Account__c</field>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>notEqual</operation>
            <value>Office</value>
        </filterItems>
        <filterItems>
            <field>Account.IsArchived__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Report Template_Account</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ii000000171vhEAA_00Ni0000008dQIFEA2</fullName>
        <active>true</active>
        <errorMessage>The value does not match a valid office (Account) record.</errorMessage>
        <field>Report_Template__c.Office__c</field>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Office</value>
        </filterItems>
        <filterItems>
            <field>Account.IsArchived__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Report Template_Office</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ii00000018ZLUEA2_00Ni000000AcM5rEAF</fullName>
        <active>true</active>
        <errorMessage>Do not select an Office for the Account field.</errorMessage>
        <field>eForm_Config__c.Account__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Office</value>
        </filterItems>
        <filterItems>
            <field>Account.IsArchived__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>eForm Config_Account</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ii00000018ZLUEA2_00Ni000000AcMX2EAN</fullName>
        <active>true</active>
        <field>eForm_Config__c.Office__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Office</value>
        </filterItems>
        <filterItems>
            <field>Account.IsArchived__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>eForm Config_Office</name>
    </namedFilters>
</CustomObject>