src/main/default/objects/Account/fields/AR_Account__c.field-meta.xml
<CustomField>
    <fullName>AR_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AR Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria Type='AR'.</errorMessage>
        <filterItems>
            <field>CoA__c.Type__c</field>
            <operation>equals</operation>
            <value>AR</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CoA__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>