src/main/default/objects/Account/fields/IsArchived__c.field-meta.xml
<CustomField>
    <fullName>IsArchived__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether the account record is deactivated.</inlineHelpText>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>