src/main/default/objects/Account/fields/Sync_to_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Sync_to_Mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this option to always send this account to all Mobile devices.</description>
    <inlineHelpText>Visual indicator that shows whether the account syncs to FieldFX Mobile. You can only control the accounts that sync to FieldFX Mobile using sharing settings and lookup filters.</inlineHelpText>
    <label>Sync to Mobile</label>
    <type>Checkbox</type>
</CustomField>