src/main/default/objects/Account/recordTypes/Office.recordType-meta.xml
<RecordType>
    <fullName>Office</fullName>
    <active>true</active>
    <label>Office</label>
</RecordType>