src/main/default/objects/Account/listViews/Offices.listView-meta.xml
<ListView>
    <fullName>Offices</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Office</value>
    </filters>
    <label>Offices</label>
    <language>en_US</language>
</ListView>